# gossip-gloomers

./: README.md
rust/: .gitignore  Cargo.toml
rust/src/: lib.rs  main.rs
rust/store/: current
rust/store/echo/: latest
rust/store/echo/20231017T174718.810+0200/: test.jepsen
rust/store/echo/20231017T174718.810+0200/net-journal/: 0.fressian  1.fressian
rust/store/echo/20231017T180721.142+0200/: test.jepsen
rust/store/echo/20231017T180721.142+0200/net-journal/: 0.fressian  1.fressian
rust/store/echo/20231017T180830.954+0200/: test.jepsen
rust/store/echo/20231017T180830.954+0200/net-journal/: 0.fressian  1.fressian
rust/store/echo/20231017T181446.607+0200/: test.jepsen
rust/store/echo/20231017T181446.607+0200/net-journal/: 0.fressian  1.fressian
rust/store/echo/20231017T181539.960+0200/: test.jepsen
rust/store/echo/20231017T181539.960+0200/net-journal/: 0.fressian  1.fressian
rust/store/echo/20231017T181838.807+0200/: test.jepsen
rust/store/echo/20231017T181838.807+0200/net-journal/: 0.fressian  1.fressian
rust/store/echo/20231017T182002.527+0200/: test.jepsen
rust/store/echo/20231017T182002.527+0200/net-journal/: 0.fressian  1.fressian
rust/store/echo/20231017T182252.129+0200/: test.jepsen
rust/store/echo/20231017T182252.129+0200/net-journal/: 0.fressian  1.fressian
rust/store/echo/20231017T183424.837+0200/: history.edn  history.txt  results.edn  test.jepsen  timeline.html
rust/store/echo/20231017T183605.632+0200/: test.jepsen
rust/store/echo/20231017T183626.304+0200/: history.edn  history.txt  test.jepsen  timeline.html
(+8 files in other folders)
