[package]
name = "nazgul"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
oneshot = "0.1.6"
tokio = { version = "1.32.0", features = ["full"] }
async-trait = "0.1.73"